--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,5 +1,3 @@
 # These are supported funding model platforms
-
-github: # ['https://github.com/SarK0Y']
-
-custom: # ['https://boosty.to/alg0z/donate']
+custom: ['https://boosty.to/alg0z/donate']
+github: SarK0Y 
