--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -5,7 +5,7 @@
 # They are provided by a third-party and are governed by
 # separate terms of service, privacy policy, and support
 # documentation.
-# template: https://github.com/actions/starter-workflows/blob/main/ci/python-publish.yml
+# template: https://github.com/actions/starter-workflows/blob/main/ci/python-publish.ymlv
 
 name: Upload Python Package
 
@@ -34,7 +34,7 @@ jobs:
     - name: Build package
       run: python -m build
     - name: Publish package
-      uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
+      uses: pypa/gh-action-pypi-publish@main
       with:
         user: __token__
         password: ${{ secrets.TOKEN_FROM_SARK0Y }}
